--- a/index.html
+++ b/index.html
@@ -5,12 +5,19 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./pages/index.css">
-  <title>Путешествия по России</title>
+  <title>Путешествия по Туркестану</title>
 </head>
 <body>
   <div class="page">
     <header class="header">
       <div class="header__logo"></div>
+      <nav class="footer__navigation">
+        <a class="footer__link" href="https://yandex.ru/maps" target="_blank">Карты</a>
+        <a class="footer__link" href="https://yandex.ru/pogoda" target="_blank">Погода</a>
+        <a class="footer__link" href="https://rasp.yandex.ru" target="_blank">Расписание</a>
+        <a class="footer__link" href="https://calendar.yandex.ru" target="_blank">Календарь</a>
+        <a class="footer__link" href="https://travel.yandex.ru" target="_blank">Путешествия</a>
+      </nav>
       <ul class="header__lang-links">
         <li class="header__lang-link header__lang-link_underline">Ru</li>
         <li class="header__lang-link">En</li>
@@ -18,8 +25,8 @@
     </header>
     <main class="content">
       <section class="lead">
-        <h1 class="lead__title">Путешествия по России</h1>
-        <p class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</p>
+        <h1 class="lead__title">Путешествия по Туркестану</h1>
+        <p class="lead__subtitle">Откройте Величие Туркестана: Погрузитесь в Историю и Красоту</p>
         <figure class="lead__figure">
           <img class="lead__image" src="./images/lead-polka.jpg" alt="Карта">
           <figcaption class="lead__caption">ваша полка — верхняя</figcaption>
@@ -28,20 +35,16 @@
       <section class="intro">
         <h2 class="intro__title">Чего мы там не&nbsp;видели?</h2>
         <p class="intro__text">
-          По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но&nbsp;только 36% 
-          планируют провести отпуск в родной стране. Мол, чего мы тут, дома, не видели? На 
-          самом деле, Россия — это целая вселенная с ласковым морем юга, густыми лесами 
-          Саян и суровыми льдами плато Путорана. А ещё увидеть все эти красоты можно без&nbsp;миллионов на счету, загранпаспорта и многочасовых перелетов. Как, например, Вера 
-          Башмакова — смелая молодая мама, которая взяла в охапку троих детей, усадила их 
-          в свою «Ладу» и&nbsp;проехала 20 тысяч километров по&nbsp;родной стране. Мы выбрали и&nbsp;описали некоторые интересные места, достойные вашего отпуска.
+          Можно исследовать уникальные культурные традиции местных жителей, попробовать
+           традиционную казахскую кухню, узнать о местной ремесленной продукции или посетить 
+           интересные музеи и галереи, где представлены история и искусство этого региона. 
+           Также стоит обратить внимание на природные достопримечательности, например, заповедники
+            или парки, чтобы увидеть разнообразие флоры и фауны Туркестана.
+          Еще одна интересная возможность — это посещение местных художественных выставок или
+           фестивалей, где можно увидеть работы местных художников, мастеров ремесел и музыкантов.
+            Также можно отправиться на экскурсию по местным мечетям, храмам или святыням, чтобы понять
+             религиозную и   культурную значимость этих мест для местного населения.
         </p>
-        <ul class="intro__list">
-          <li class="intro__list-item">Часовых поясов <span class="intro__text-weight">11</span></li>
-          <li class="intro__list-item">Объектов природного наследия ЮНЕСКО <span class="intro__text-weight">12</span></li>
-          <li class="intro__list-item">Объектов культурного наследия ЮНЕСКО <span class="intro__text-weight">16</span></li>
-          <li class="intro__list-item">Природных заповедников <span class="intro__text-weight">105</span></li>
-          <li class="intro__list-item">Аэропортов <span class="intro__text-weight">241</span></li>
-        </ul>
       </section>
       <section class="photo-grid">
         <img class="photo-grid__item" src="./images/photo-grid-train.jpg" alt="Поезд">
@@ -60,7 +63,7 @@
       <section class="places">
         <div class="place">
           <h2 class="place__title">Куршская коса</h2>
-          <img class="place__image" src="./images/place-kosa.jpg" alt="Коса">
+          <img class="place__image" src="/images/turkestan-khoja~.jpg" alt="Коса">
           <div class="place__website">
             <p class="place__url-heading">url</p>
             <a class="place__link" href="http://park-kosa.ru" target="_blank">park-kosa.ru</a>
@@ -194,14 +197,8 @@
       </section>
     </main>
     <footer class="footer">
-      <nav class="footer__navigation">
-        <a class="footer__link" href="https://yandex.ru/maps" target="_blank">Карты</a>
-        <a class="footer__link" href="https://yandex.ru/pogoda" target="_blank">Погода</a>
-        <a class="footer__link" href="https://rasp.yandex.ru" target="_blank">Расписание</a>
-        <a class="footer__link" href="https://calendar.yandex.ru" target="_blank">Календарь</a>
-        <a class="footer__link" href="https://travel.yandex.ru" target="_blank">Путешествия</a>
-      </nav>
-      <p class="footer__copyright">&copy; 2022. Стас Кудинов</p>
+
+      <p class="footer__copyright">&copy; 2023. Алмаз Рахметов</p>
     </footer>
   </div>
 </body>
