--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./pages/index.css">
-  <title>Путешествия по Туркестану</title>
+  <title>Түркістанды аралау</title>
 </head>
 <body>
   <div class="page">
@@ -13,192 +13,165 @@
       <div class="header__logo"></div>
       <nav class="footer__navigation">
         <a class="footer__link" href="https://yandex.ru/maps" target="_blank">Карты</a>
-        <a class="footer__link" href="https://yandex.ru/pogoda" target="_blank">Погода</a>
-        <a class="footer__link" href="https://rasp.yandex.ru" target="_blank">Расписание</a>
-        <a class="footer__link" href="https://calendar.yandex.ru" target="_blank">Календарь</a>
-        <a class="footer__link" href="https://travel.yandex.ru" target="_blank">Путешествия</a>
+        <a class="footer__link" href="https://yandex.ru/pogoda" target="_blank">Ауа райы</a>
+        <a class="footer__link" href="https://rasp.yandex.ru" target="_blank">Кесте</a>
+        <a class="footer__link" href="https://calendar.yandex.ru" target="_blank">Күнтізбе</a>
+        <a class="footer__link" href="https://travel.yandex.ru" target="_blank">Сапарлар</a>
       </nav>
-      <ul class="header__lang-links">
-        <li class="header__lang-link header__lang-link_underline">Ru</li>
-        <li class="header__lang-link">En</li>
-      </ul>
     </header>
     <main class="content">
       <section class="lead">
-        <h1 class="lead__title">Путешествия по Туркестану</h1>
-        <p class="lead__subtitle">Откройте Величие Туркестана: Погрузитесь в Историю и Красоту</p>
+        <h1 class="lead__title">Түркістанды аралау</h1>
+        <p class="lead__subtitle">Түркістанның ұлылығын ашыңыз: Тарих пен сұлулыққа бой алдырыңыз</p>
         <figure class="lead__figure">
-          <img class="lead__image" src="./images/lead-polka.jpg" alt="Карта">
-          <figcaption class="lead__caption">ваша полка — верхняя</figcaption>
+          <img class="lead__image" src="./images/photo1.jpg" alt="Карта">
         </figure>
       </section>
       <section class="intro">
-        <h2 class="intro__title">Чего мы там не&nbsp;видели?</h2>
+        <h2 class="intro__title">Онда не көрмедік?</h2>
         <p class="intro__text">
-          Можно исследовать уникальные культурные традиции местных жителей, попробовать
-           традиционную казахскую кухню, узнать о местной ремесленной продукции или посетить 
-           интересные музеи и галереи, где представлены история и искусство этого региона. 
-           Также стоит обратить внимание на природные достопримечательности, например, заповедники
-            или парки, чтобы увидеть разнообразие флоры и фауны Туркестана.
-          Еще одна интересная возможность — это посещение местных художественных выставок или
-           фестивалей, где можно увидеть работы местных художников, мастеров ремесел и музыкантов.
-            Также можно отправиться на экскурсию по местным мечетям, храмам или святыням, чтобы понять
-             религиозную и   культурную значимость этих мест для местного населения.
+          Сіз жергілікті тұрғындардың бірегей мәдени дәстүрлерін зерттей аласыз, көріңіз
+           дәстүрлі қазақ тағамдары, жергілікті қолөнер бұйымдарымен танысыңыз немесе қонаққа барыңыз
+           осы аймақтың тарихы мен өнерін көрсететін қызықты мұражайлар мен галереялар.
+           Сондай-ақ табиғи көрікті жерлерге, мысалы, қорықтарға назар аударған жөн
+            Түркістанның флорасы мен фаунасының алуан түрлілігін көру үшін саябақтар.
+          Тағы бір қызықты мүмкіндік - жергілікті өнер көрмелеріне бару немесе
+            фестивальдер, онда сіз жергілікті суретшілердің, қолөнершілер мен музыканттардың жұмыстарын тамашалай аласыз.
+             Сондай-ақ түсіну үшін жергілікті мешіттерге, храмдарға немесе храмдарға экскурсия жасай аласыз
+              бұл жерлердің жергілікті халық үшін діни және мәдени маңызы.
         </p>
       </section>
       <section class="photo-grid">
-        <img class="photo-grid__item" src="./images/photo-grid-train.jpg" alt="Поезд">
-        <img class="photo-grid__item" src="./images/photo-grid-atharva-tulsi.jpg" alt="Атарва">
-        <img class="photo-grid__item" src="./images/photo-grid-tuman.jpg" alt="Туман">
-        <img class="photo-grid__item" src="./images/photo-grid-sochi.jpg" alt="Сочи">
-        <img class="photo-grid__item" src="./images/photo-grid-arisa.jpg" alt="Ариса">
-        <img class="photo-grid__item" src="./images/photo-grid-baikal.jpg" alt="Байкал">
-        <img class="photo-grid__item" src="./images/photo-grid-elbrus.jpg" alt="Эльбрус">
-        <img class="photo-grid__item" src="./images/photo-grid-kondratiev.jpg" alt="Кондратьев">
-        <img class="photo-grid__item" src="./images/photo-grid-kamchatka-1.jpg" alt="Камчатка">
-        <img class="photo-grid__item" src="./images/photo-grid-kamchatka-2.jpg" alt="Камчатка-2">
-        <img class="photo-grid__item" src="./images/photo-grid-baikal-2.jpg" alt="Байкал-2">
-        <img class="photo-grid__item" src="./images/photo-grid-ergaki.jpg" alt="Ергаки">
+        <img class="photo-grid__item" src="./images/licensed-image.jfif">
+        <img class="photo-grid__item" src="./images/qwqerq.jpg">
+        <img class="photo-grid__item" src="./images/2021-05-25.jpg">
+        <img class="photo-grid__item" src="./images/IMG_9419.jpg">
+        <img class="photo-grid__item" src="./images/123image .jfif">
+        <img class="photo-grid__item" src="./images/ccccccc.jfif">
+        <img class="photo-grid__item" src="./images/2021-07-17.jpg">
+        <img class="photo-grid__item" src="./images/20211002_093410.jpg">
+        <img class="photo-grid__item" src="./images//qwewwwww.jfif">
+        <img class="photo-grid__item" src="./images/camel.jfif">
+        <img class="photo-grid__item" src="./images/12.jpg.webp">
+        <img class="photo-grid__item" src="./images/Без названия.jfif">
       </section>
       <section class="places">
         <div class="place">
-          <h2 class="place__title">Куршская коса</h2>
-          <img class="place__image" src="/images/turkestan-khoja~.jpg" alt="Коса">
+          <h2 class="place__title">Қожа Ахмет Яссауи кесенесі</h2>
+          <img class="place__image" src="/images/turkestan-khoja~.jpg">
           <div class="place__website">
             <p class="place__url-heading">url</p>
-            <a class="place__link" href="http://park-kosa.ru" target="_blank">park-kosa.ru</a>
+            <a class="place__link" href="https://culturemap.kz/kk/object/mavzoleiy-hodji-ahmeta-yasavi" target="_blank">culturemap.kz</a>
           </div>
           <div>
             <p class="place__paragraph">
-              Здесь, посреди лесов и песчаных дюн, вы сможете 
-              увидеть два водных горизонта — спокойного 
-              Куршского залива с одной стороны и подёрнутого 
-              рябью волн Балтийского моря с другой. Уникальная 
-              природная зона на&nbsp;краю российского анклава.
+              Қожа Ахмет Яссауи кесенесі – сәулеттің көрнекті ескерткіші, ортағасырлық сәулет өнерінің жарқын үлгісі.
             </p>
             <p class="place__paragraph">
-              На этом Калининградская область не заканчивается. 
-              Для&nbsp;путешественника и&nbsp;исследователя там же по&nbsp;соседству — самая западная точка России, 
-              Балтийская коса, — и&nbsp;немецкое наследие россыпи 
-              небольших приморских городов. Атмосфера здешних 
-              мест исключает суету, окуная в&nbsp;спокойствие 
-              природы и запах стального, прохладного моря.
+              Яссауи кесенесі масштабы бойынша орасан зәулім порталды-күмбезді ғимарат болып табылады. Оның енң – 46,5 м, ұзындығы – 65,5 м. 
+              Кесене қазандық бұрыштарынан таралатын және орын-жайды 8 бөлікке бөлетін өткелдер, баспалдақтар және дәліздермен 
+              байланыстырылған 35 орын-жайдан тұрады. Құрылыс алебастр ерітіндісі негізіндегі күйдірілген кірпіштен қаланған.
+              Ғимараттың оң жақ порталы екі биік мұнарадан және аркадан тұрады, айтарлықтай биіктігінің (39 м) және арканың үлкен өткелінің (18 м)
+               арқасында ол негізгі ғимараттың көлемінен ерекшеленіп, оның сәулеттік бейнесінің алыптығын айқындай түседі.
             </p>
           </div>
         </div>
         <div class="place">
-          <h2 class="place__title">Кольский</h2>
-          <img class="place__image" src="./images/place-kolsky.jpg" alt="Кольский">
+          <h2 class="place__title">Керуен-сарай</h2>
+          <img class="place__image" src="./images/keruensarai.jfif">
           <div class="place__website">
             <p class="place__url-heading">url</p>
-            <a class="place__link" href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy" target="_blank">National Geographic</a>
+            <a class="place__link" href="https://kaz.nur.kz/kaleidoscope/1910506-keruen-sarai-ertegi-alemine-ainalgan-turkistannyn-bugingi-kelbeti-qandai/" target="_blank">kaz.nur.kz</a>
           </div>
           <div>
             <p class="place__paragraph">
-              Почти весь полуостров находится за Полярным 
-              кругом. Саамская тундра, от которой на юг — 
-              тайга, а&nbsp;на север — Ледовитый океан, 
-              прикидывающийся Баренцевым морем.
+              10 сәуір күні Түркістан қаласында "Керуен-сарай" көпфункционалды туристік кешені ашылған болатын.
+               Құрылысы 2019 жылы желтоқсанда басталған кешен әлі де жұмысына толық кіріскен жоқ. Дегенмен қазіргі 
+               күннің өзінде жекелеген нысандары қонақтарды күтуге әзір.
             </p>
             <p class="place__paragraph">
-              Возможно, вы смотрели Звягинцева и даже слышали 
-              историю арктического фестиваля в Териберке. 
-              Возможно, слово «Хибины» не осталось под снегом 
-              школьных воспоминаний об уроках географии. 
-              Возможно, вы не интересовались пронизывающей 
-              земную кору сверхглубокой скважиной, а от апатитов 
-              вас давно накрывает апатия. Но ваша мечта увидеть 
-              северное сияние начинает сбываться с билетом 
-              в Мурманск.
+              "Керуен-сарай" кешенінің орналасқан жері - "Әзірет Сұлтан" мәдени қорығының буферлік аймағындағы 20,5 га
+               аумақта, Қожа Ахмет Яссауи кесенесіне қарама-қарсы.
             </p>
           </div>
         </div>
         <div class="place">
-          <h2 class="place__title">Алтай</h2>
-          <img class="place__image" src="./images/place-altai.jpg" alt="Алтай">
+          <h2 class="place__title">Гауhар ана кесенесі</h2>
+          <img class="place__image" src="./images/gauharana.jpg" alt="Алтай">
           <div class="place__website">
             <p class="place__url-heading">url</p>
-            <a class="place__link" href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822" target="_blank">Facebook</a>
+            <a class="place__link" href="https://qazir.kz/article/Gauhar_ana_qesenesi" target="_blank">qazir.kz </a>
           </div>
           <div>
             <p class="place__paragraph">
-              Алтай — одно из красивейших мест в России. 
-              В первую очередь из-за гор: если ехать вдоль хребта, 
-              вы увидите склоны, усыпанные соснами, горные реки 
-              и озёра. А&nbsp;если вы откроете в автомобиле окна, 
-              сможете познакомиться с невидимым чудом здешних 
-              мест — горным воздухом.
+              Гауhар ана кесенесі (ХІІ-ХІV ғғ.) Түркістан қаласынан оңтүстікке қарай 4 шақырым жерде,
+               Түркістан – Шәуілдір автокөлік жолынан солға қарай 400-500 метр қашықтықта орналасқан.
             </p>
             <p class="place__paragraph">
-              Климат на Алтае умеренный, поэтому ехать сюда 
-              лучше всего летом. Так вы увидите всё разнообразие 
-              местной флоры и фауны. По лесам Алтая бродят 
-              лоси, над хребтами летают орлы, а&nbsp;на равнинах 
-              пасутся косули. И&nbsp;знаменитые манулы — тоже 
-              обитатели Алтайского края.
+              Гауһар ана – ұлы ақын, ойшыл Қожа Ахмет Ясауидің қызы.
+               Гауһар ана жайлы аңыз-әңгімелерге сүйенсек, ол емшілік қасиеті ерекше жан болған деседі.
+                Әлі күнге дейін ана кесенесінің маңында емдік қасиеттері бар артезиан суы шығатын құдықтар көптеп кездеседі.
+                 Деректерде анамыздың ақылы көркіне сай ерекше жан болғандығы айтылады.
+                Қазіргі заманғы кесене ғимараты — 2015 жылы салынған. Күйдірілген кірпіштен салынған. Кесененің биіктігі 9 м, 
+                жоспар бойынша ғимарат порталдық шаршы дүңгіршек болып табылады.
             </p>
           </div>
         </div>
         <div class="place">
-          <h2 class="place__title">Зимний Байкал</h2>
-          <img class="place__image" src="./images/place-winter-baikal.jpg" alt="Зимний Байкал">
+          <h2 class="place__title">Күлтөбе</h2>
+          <img class="place__image" src="./images/kultobe.jfif" alt="Зимний Байкал">
           <div class="place__website">
             <p class="place__url-heading">url</p>
-            <a class="place__link" href="https://vk.com/baikalmile" target="_blank">https://vk.com/baikalmile</a>
+            <a class="place__link" href="https://kultobe.com/kz/" target="_blank">kultobe.com</a>
           </div>
           <div>
             <p class="place__paragraph">
-              Всем известен Байкал как крупнейшее озеро 
-              в мире. Многие также знают, что это самый большой 
-              источник пресной воды и&nbsp;одно из красивейших мест 
-              в&nbsp;России.
+              Күлтөбе – Қазақстан РеспубликасыныңТүркістан қаласында орналасқан ежелгі бекіністі
+               қоныс және археологиялық ескерткіш. Нысан – ЮНЕСКО-ның Дүниежүзілік мұра тізіміне 
+               енген ескерткіш – Түркістан қаласының шығысындағы Қожа Ахмет Ясауи кесенесі буферлік 
+               оңтүстік аймағында, 480 м жерде орналасқан. 
             </p>
             <p class="place__paragraph">
-              Конечно, это всё так. Но Байкал ещё идеальное 
-              место&nbsp;для  соревнований по скийорингу. Это такой 
-              вид спорта, когда лыжник привязывает себя к&nbsp;мотоциклу,&nbsp;и&nbsp;тандем старается развить как можно 
-              бóльшую скорость на льду. В марте 2019 года на 
-              фестивале «Байкальская миля» был поставлен 
-              мировой рекорд — 197.011 км/ч.
+              Күлтөбе қалажұртын қазу кезінде көптеген қызықты заттар: алтын, темір және қола бұйымдар, 
+              керамика, тиындар, органика, тандыр пештері бар үй-жайлар, көптеген ыдыс сынықтары табылды. 
+              Бұл Күлтөбеде осы тақтайшаларды шығаратын шеберханалардың болғандығын көрсетеді.
             </p>
           </div>
         </div>
         <div class="place">
-          <h2 class="place__title">Карелия</h2>
-          <img class="place__image" src="./images/place-karelia.jpg" alt="Карелия">
+          <h2 class="place__title">Рабия Сұлтан Бегім кесенесі</h2>
+          <img class="place__image" src="./images/R.S.Begim-kesenes-03.jpg" alt="Карелия">
           <div class="place__website">
             <p class="place__url-heading">url</p>
-            <a class="place__link" href="http://vodlozero.ru" target="_blank">http://vodlozero.ru/</a>
+            <a class="place__link" href="https://azretsultan.kz/rabiya-s-ltan-begim-kesenesi-xv/" target="_blank">azretsultan.kz  </a>
           </div>
+          <div>
           <p class="place__paragraph">
-            Сибирь заканчивается не на Урале, а в Карелии: 
-            образующая тайгу сибирская лиственница не растёт 
-            западнее Водлозера. Зато здесь она вымахивает на 
-            30 метров — леса карельских национальных парков 
-            из-за непроходимых болот никогда не знали топора. 
-            Некоторым соснам уже больше чем&nbsp;полтысячелетия. 
-            Прикоснитесь к живому существу, видевшему 
-            солнце раньше, чем увидал его Иван Грозный. 
-            В девственном лесу на сотню километров не 
-            встретишь тропы. А на редких тропинках деревья 
-            в паре метров от земли помечены медвежьими 
-            когтями. Чтобы все знали, кто тут хозяин.
+            Қожа Ахмет Ясауи кесенесінің оңтүстік-шығыс бетінде 60 метр қашықтықта орналасқан.
+            Рабия Сұлтан Бегім Темірдің ұрпағы, атақты астроном ғалым Ұлықбектің қызы.
+            Арнайы салынған кесенеде өзі, ұлы және үш немересімен қоса жерленген. Оның  құлпытасында: «Бұл құдіретті
+            Әмір-Темір Көрегеннің ұлы, азапты ажалдан қаза тапқан, құдіретті ұлы сұлтан Ұлықбек көрегеннің қызы, ақсүйек, 
+            Құдай кешіріп, рақымшылық жасаған, ізгі жанды Рабия Сұлтан бегімнің тыныштық тауып жатқан жері» деген сөздер жазылған.
+          </p>
+          <p class="place__paragraph">
+            Биіктігі 20,6 метр, қасбетінің жалпы ені 11 метр. Кесененің аркасы 6 метр, айнала орналасқан қырларының арақашықтығы 3,5метр.
+             Орталық бөлігі цилиндр тәрізді биік барабанға орнатылған күмбезбен жабылған.
           </p>
         </div>
       </section>
       <section class="cover">
-        <a class="cover__overlay" href="https://stampsy.com/na-elektrichkakh-do-baikala" target="_blank">
+        <a class="cover__overlay" href="https://qazaqgeography.kz/kz/turkistan-oblysy-211650" target="_blank">
           <div class="cover__background"></div>
-          <h2 class="cover__title">До Байкала «на&nbsp;собаках»</h2>
+          <h2 class="cover__title">Түркістан: ғасырлар сиқыры және тарихтың көркі.</h2>
           <p class="cover__subtitle">
-            По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.
+            Сізді әр тасы ғасырлар тарихымен сыр шертетін, әр бұрышы мәдениет тынысына айналған Түркістан әлеміне шақырамыз. 
+            Түркістанмен бірге өткеннің жұмбақ лабиринттері мен бүгінгінің байлығын ашыңыз.
           </p>
         </a>
       </section>
     </main>
-    <footer class="footer">
-
-      <p class="footer__copyright">&copy; 2023. Алмаз Рахметов</p>
+    <footer class="footer"> 
+      <p class="footer__copyright">&copy; 2023. Р. Алмаз, К. Аруан </p>
     </footer>
   </div>
 </body>
